# psa_crypto_driver

./: CMakeLists.txt  Kconfig  SW-Content-Register.txt  add_psa_crypto_driver_v3.yml  mcux.cmake
ele_s200/: ele_s2xx.h  ele_s2xx_crypto_primitives.h
ele_s4xx/src/common/: mcux_psa_s4xx_entropy.c
els_pkc/: els_pkc_driver.h
els_pkc/include/opaque/: mcux_psa_els_pkc_opaque_key_generation.h
els_pkc/oracle/inc/: mcuxClPsaDriver_Oracle_ElsUtils.h  mcuxClPsaDriver_Oracle_Interface_key_locations.h  mcuxClPsaDriver_Oracle_Utils.h
els_pkc/oracle/src/: mcuxClPsaDriver_Oracle.c  mcuxClPsaDriver_Oracle_ElsUtils.c  mcuxClPsaDriver_Oracle_Utils.c
els_pkc/src/common/: mcux_psa_els_pkc_common_init.c  mcux_psa_els_pkc_entropy.c
els_pkc/src/opaque/: mcux_psa_els_pkc_opaque_aead.c  mcux_psa_els_pkc_opaque_key_generation.c
els_pkc/src/transparent/: mcux_psa_els_pkc_aead.c
zephyr/: CMakeLists.txt  Kconfig
